some scrollbar ugly bug

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -37,7 +37,7 @@ textarea {
 /* Chat containers */
 
 #chat-display-window {
-    height: 87%;
+    height: 86%;
     margin-top: 5px;
     margin-bottom: 5px;
     border-style: solid;
